--- a/MedicalStudents/index.rmd
+++ b/MedicalStudents/index.rmd
@@ -15,26 +15,33 @@ ALI is a surgical emergency, and all physicians should be able to identify it. A
 Always look out for compartment syndrome after revascularizations done for ALI. This process is a consequence of ischemia and reperfusion. When present, treat with fasciotomies to release the affected compartments.
 intermittent claudication.
 
-Claudication refers to reproducible pain in a muscular territory of a limb following exertion. It is the limb equivalent of exertional angina. 
-o	Claudication is NOT limb threatening. Patients with untreated claudication will only rarely develop the limb-threatening problems of rest pain or foot ulcers (rate of ~1-2% per year).
-o	It is treated with exercise therapy and smoking cessation. Adherence to an exercise regimen can double pain-free walking distance. Exercise regimens have produced similar or better results than angioplasty and stenting in all seven randomized controlled trials that have been done in patients with intermittent claudication.
-o	Intervention (surgery or endovascular therapy) is indicated only for patients who have adhered to an exercise regimen but have symptoms so severe that it impairs their work duties or activities of daily living.
-o	Patients with intermittent claudication should receive optimal medical management to reduce their risk of cerebrovascular and coronary events. This generally includes the ABCDs: Aspirin, Blood Pressure Control, Cholesterol management, and a Diabetes regimen.
-Ankle-brachial indices (ABIs) and toe pressures
-•	ABIs are a rough measure of arterial perfusion at the level of the ankle and foot. Along with segmental pressures and toe pressures, ABIs comprise the most commonly performed non-invasive vascular testing for the lower extremity.
-•	Measurement:
-o	Measurement of the ankle pressures is done with a cuff at the ankle. A handheld Doppler probe is used to sequentially auscultate the dorsalis pedis and posterior tibial arteries. The systolic pressure at which an arterial waveform is heard is the pressure that is recorded. Ex. 110 mmHg for the posterior tibial artery and 60 mmHg for the dorsalis pedis artery.  
-o	The higher of the two ankle pressures (dorsalis pedis or posterior tibial) is compared to the higher of the two arm pressures. The ratio is the ABI for the given extremity. Ex. 110 mmHg for the left posterior tibial artery [the higher of the two for the given extremity] divided by 130mmHg for the right brachial artery [which had been higher than the left brachial artery pressure] = left lower extremity ABI of 0.85.
+## Claudication
+Claudication refers to reproducible pain in a muscular territory of a limb following exertion. It is the limb equivalent of exertional angina. Claudication is NOT limb threatening. Patients with untreated claudication will only rarely develop the limb-threatening problems of rest pain or foot ulcers (rate of ~1-2% per year). It is treated with exercise therapy and smoking cessation. Adherence to an exercise regimen can double pain-free walking distance. Exercise regimens have produced similar or better results than angioplasty and stenting in all seven randomized controlled trials that have been done in patients with intermittent claudication.
 
-•	Caveats in interpretation:
-o	ABIs are typically not as informative as you might think in the setting of claudication or asymptomatic PAD. 
-	There is not a great correlation between degree of symptoms and ABIs. Some younger, active patients may have very disabling symptoms with ABIs that are minimally-impaired or even normal at rest. Older, less active patients may have severely impaired ABIs with no or minimal symptoms.
-	Although ABIs may help corroborate the presence of PAD, intermittent claudication can typically be diagnosed without ABI results.
-	There are no indications to treat PAD simply based on ABI results (i.e. in absence of other symptoms or problems), regardless of how low they may be.
-o	ABIs are notoriously unreliable in patient with diabetes mellitus.
-	Calcification in the media of the arteries prevents adequate compression from the blood pressure cuff. ABIs >1.2 reflect noncompressible vessels and are therefore uninformative. However, even results in the normal range or below may be spuriously elevated because of this same process.
-	The best non-invasive tests for degree of arterial perfusion in patients with diabetes are toe pressures, transcutaneous oximetry (TcPO2), or skin perfusion pressures. These tests assess blood flow in areas or via methods that are not typically affected by the same process of medial calcification. These methods also have much better reliability in predicting the likelihood of foot wound healing in patients with diabetes and foot wounds.
+Intervention (surgery or endovascular therapy) is indicated only for patients who have adhered to an exercise regimen but have symptoms so severe that it impairs their work duties or activities of daily living.
 
-*CAVEAT about terminology:
+Patients with intermittent claudication should receive optimal medical management to reduce their risk of cerebrovascular and coronary events. This generally includes the ABCDs: Aspirin, Blood Pressure Control, Cholesterol management, and a Diabetes regimen.
+Ankle-brachial indices (ABIs) and toe pressures.
+
+## Ankle-brachial indices (ABIs)
+ABIs are a rough measure of arterial perfusion at the level of the ankle and foot. Along with segmental pressures and toe pressures, ABIs comprise the most commonly performed non-invasive vascular testing for the lower extremity.
+
+### ABI Measurement:
+Measurement of the ankle pressures is done with a cuff at the ankle. A handheld Doppler probe is used to sequentially auscultate the dorsalis pedis and posterior tibial arteries. The systolic pressure at which an arterial waveform is heard is the pressure that is recorded. Ex. 110 mmHg for the posterior tibial artery and 60 mmHg for the dorsalis pedis artery.  
+
+The higher of the two ankle pressures (dorsalis pedis or posterior tibial) is compared to the higher of the two arm pressures. The ratio is the ABI for the given extremity. Ex. 110 mmHg for the left posterior tibial artery [the higher of the two for the given extremity] divided by 130mmHg for the right brachial artery [which had been higher than the left brachial artery pressure] = left lower extremity ABI of 0.85.
+
+### Caveats in ABI interpretation:
+<ul>
+<li>ABIs are typically not as informative as you might think in the setting of claudication or asymptomatic PAD. 
+<li>There is not a great correlation between degree of symptoms and ABIs. Some younger, active patients may have very disabling symptoms with ABIs that are minimally-impaired or even normal at rest. Older, less active patients may have severely impaired ABIs with no or minimal symptoms.</li>
+<li>Although ABIs may help corroborate the presence of PAD, intermittent claudication can typically be diagnosed without ABI results.</li>
+<li>There are no indications to treat PAD simply based on ABI results (i.e. in absence of other symptoms or problems), regardless of how low they may be.</li>
+<li>ABIs are notoriously unreliable in patient with diabetes mellitus.</li>
+<li>Calcification in the media of the arteries prevents adequate compression from the blood pressure cuff. ABIs >1.2 reflect noncompressible vessels and are therefore uninformative. However, even results in the normal range or below may be spuriously elevated because of this same process.</li>
+<li>The best non-invasive tests for degree of arterial perfusion in patients with diabetes are toe pressures, transcutaneous oximetry (TcPO2), or skin perfusion pressures. These tests assess blood flow in areas or via methods that are not typically affected by the same process of medial calcification. These methods also have much better reliability in predicting the likelihood of foot wound healing in patients with diabetes and foot wounds.</li>
+</ul>
+  
+### Caveat about terminology:
 You may be asked to differentiate between various types of ulcers on your exam. These categories present useful concepts, and the differences between venous leg ulcers and foot ulcers should be easily identified both on an exam and in clinical practice. In clinical practice, the categorization of foot ulcers as being either “arterial” or “neuropathic” is artificial, and most clinicians who see patients with foot ulcers have abandoned use of these terms. As I have tried to point out in the table above, the visual appearance of “neuropathic” and “arterial” ulcers may be identical. Palpating for pedal pulses is important, but several studies have demonstrated that this has only mediocre diagnostic accuracy for the identification of peripheral artery disease. (The diagnostic accuracy of other findings, such as skin temperature and hair loss, is much lower still and should not be relied on as a means to identify peripheral artery disease). 
 Approximately 40% of patients with diabetic foot ulcers will have some degree of peripheral artery disease, and the degree of arterial impairment should be considered as a spectrum ranging from mild to severe rather than as simply present vs. absent. Have a low threshold to refer a patient with a foot ulcer for non-invasive arterial testing (ABIs and toe pressures or other similar testing) and/or for evaluation by a vascular surgeon if there is any doubt about the presence or contribution of peripheral artery disease in this setting.
