--- a/MedicalStudents/index.rmd
+++ b/MedicalStudents/index.rmd
@@ -1,3 +1,15 @@
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YPLVGC5FDP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YPLVGC5FDP');
+</script>
+</head>
+
 These pages list some miscellaneous principles that are relevant to and important in understanding peripheral arterial disease (PAD). Virtually all medical specialties encounter patients with PAD, but misconceptions about its meaning and management abound. I hope that between didactic lectures, your reading of a student-level surgery textbook, and this supplement you will have some rudimentary understanding of the management of PAD. 
 
 Good luck on your exam. Please feel free to email me with any questions you may have.
