--- a/MedicalStudents/index.rmd
+++ b/MedicalStudents/index.rmd
@@ -56,4 +56,14 @@ The higher of the two ankle pressures (dorsalis pedis or posterior tibial) is co
   
 ### Caveat about terminology:
 You may be asked to differentiate between various types of ulcers on your exam. These categories present useful concepts, and the differences between venous leg ulcers and foot ulcers should be easily identified both on an exam and in clinical practice. In clinical practice, the categorization of foot ulcers as being either “arterial” or “neuropathic” is artificial, and most clinicians who see patients with foot ulcers have abandoned use of these terms. As I have tried to point out in the table above, the visual appearance of “neuropathic” and “arterial” ulcers may be identical. Palpating for pedal pulses is important, but several studies have demonstrated that this has only mediocre diagnostic accuracy for the identification of peripheral artery disease. (The diagnostic accuracy of other findings, such as skin temperature and hair loss, is much lower still and should not be relied on as a means to identify peripheral artery disease). 
+
 Approximately 40% of patients with diabetic foot ulcers will have some degree of peripheral artery disease, and the degree of arterial impairment should be considered as a spectrum ranging from mild to severe rather than as simply present vs. absent. Have a low threshold to refer a patient with a foot ulcer for non-invasive arterial testing (ABIs and toe pressures or other similar testing) and/or for evaluation by a vascular surgeon if there is any doubt about the presence or contribution of peripheral artery disease in this setting.
+
+### "Arterial" and "Neuropathic" Foot Ulcers vs. Venous Leg Ulcers
+
+You may be asked to differentiate between various types of ulcers on your exam. These categories present useful concepts, and the differences between venous leg ulcers and foot ulcers should be easily identified both on an exam and in clinical practice. <u>In clinical practice, the categorization of foot ulcers as being either “arterial” or “neuropathic” is artificial, and most clinicians who see patients with foot ulcers have abandoned use of these terms</u> because of the varying degree to which arterial insufficiency is impairing wound healing depends on the severity of peripheral artery disease. In other words, peripheral artery disease and its impact on the etiology of a foot ulcer should be considered as a spectrum ranging from mild to severe rather than as simply present vs. absent. 
+
+ulcer type | "neuropathic foot ulcer" | "arterial ulcer" | venous leg ulcer
+location | 90% on the plantar forefoot or toes | 90% on the plantar forefoot or toes | between knee and malleoli, perhaps affecting dorsal foot ("gaiter" distribution)
+
+
